# Linear-Regressions

./: pyproject.toml  regression.ipynb
.ipynb_checkpoints/: README-checkpoint.md  regression-checkpoint.ipynb  regression2-checkpoint.ipynb
