[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["rand alsallaq <randalsallaq97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
panda = "^0.3.1"
jupyterlab = "^2.2.9"
lab = "^6.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
sklearn = "^0.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
